--- a/templates/index.html
+++ b/templates/index.html
@@ -21,8 +21,8 @@
       <a href="#faq" class="font-bold text-md hover:text-purple-600">FAQ</a>
     </nav>
     <div class="space-x-2 flex items-center">
-      <button class="px-4 py-2 border rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700"><a href="ffgf.html">Login</a></button>
-      <button class="px-4 py-2 bg-purple-600 text-white rounded-lg hover:bg-purple-700"><a href="ffgf.html">Start Free Trial</a></button>
+      <button class="px-4 py-2 border rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700"><a href="/login_signup">Login</a></button>
+      <button class="px-4 py-2 bg-purple-600 text-white rounded-lg hover:bg-purple-700"><a href="">Start Free Trial</a></button>
       <button id="modeToggle" class="text-xl">🌙</button>
     </div>
   </header>
