Some Changes and Updated Readme.md

--- a/templates/login_signup.html
+++ b/templates/login_signup.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Trippy | Login / Signup</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="../static/trippystyle.css">
+  <link rel="stylesheet" href="../static/login_signup.css">
 </head>
 <body class="h-screen w-full flex items-center justify-center bg-black/60 backdrop-blur-md font-sans">
 
